<resources>
    <string name="app_name">Drone</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Start Retrieval</string>

    <string name="second_fragment_label">Retrieval Active</string>
    <string name="next">Start</string>
    <string name="previous">End</string>

    <string name="retry">Retry</string>
    <string name="buttonMappings">Button Mappings (Toggle)</string>

    <string name="sensors">Sensor Readings</string>
    <string name="ultrasonic">Ultrasonic Distance: N/A</string>
    <string name="barometric">Barometric Altitude: N/A</string>
    <string name="hello_first_fragment">Drone Retrieval</string>
</resources>