<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="46dp">
        <!--app:layout_constraintTop_toBottomOf="@+id/video"-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginBottom="10dp"
                android:text="@string/buttonMappings"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20dp"
                app:layout_constraintVertical_bias="0.587" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/control_led"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/purple_200"
                    android:text="C1: PP #5 (Package Tracking LEDs)" />

                <TextView
                    android:id="@+id/pp4"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginRight="10dp"
                    android:text="C2: PP #4 (N/A)" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sensors"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20dp"
                app:layout_constraintVertical_bias="0.587" />

            <TextView
                android:id="@+id/textview_ultrasonic"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="@string/ultrasonic"
                app:layout_constraintVertical_bias="0.587" />

            <TextView
                android:id="@+id/textview_barometric"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="@string/barometric"
                app:layout_constraintVertical_bias="0.587" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/retry" />

            <Button
                android:id="@+id/button_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>